<resources>
    <string name="app_name">ElectronicBand</string>
    <string name="theory">Teoria</string>
    <string name="calculators">Kalkulatory</string>
    <string name="descriptions">Opisy</string>
    <string name="bramki_logiczne">Bramki logiczne</string>
    <string name="prosty">Prosty</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atang">atang</string>
    <string name="pi">pi</string>
    <string name="tang">tang</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="hex">hex</string>
    <string name="minuss">-</string>
    <string name="plus">+</string>
    <string name="kropk">.</string>
    <string name="_0">0</string>
    <string name="bin">bin</string>
    <string name="pierwiastek">P</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">x</string>
    <string name="c">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dziele">/</string>
    <string name="ce">CE</string>
    <string name="kalk">Kalkulatory</string>
    <string name="s_owniczek">Słowniczek</string>
</resources>
