<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.Prosty_Kalkulator"
    android:background="@drawable/tlo_k"
    android:paddingLeft="10dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="right"

            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="right"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />


        <TextView
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="26sp"
            />


        <!-- WIEEEEEEEERSZ -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>


            <Button
                android:id="@+id/button2"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_2"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_3"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp" />

            <Button
                android:id="@+id/mnoz"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/x"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>


            <Button
                android:id="@+id/kasujc"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/c"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />



        </LinearLayout>
        <!-- WIEEEEEEEERSZ -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <Button
                android:id="@+id/button4"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_4"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>


            <Button
                android:id="@+id/button5"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_5"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/button6"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_6"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/dziel"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/dziele"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/kasujce"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/ce"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- WIEEEEEEEERSZ -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_7"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />


            <Button
                android:id="@+id/button8"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_8"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/button9"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/_9"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />


            <Button
                android:id="@+id/sqrt"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski2_prosty"
                android:fontFamily="monospace"
                android:onClick="onClick"
                android:text="@string/pierwiastek"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />


            <Button
                android:id="@+id/bin"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/bin"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
        <!-- WIEEEEEEEERSZ -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/zero"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:textSize="18sp"
                android:text="@string/_0"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"

                />

            <Button
                android:id="@+id/kropka"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski_prosty"
                android:onClick="onClick"
                android:text="@string/kropk"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>


            <Button
                android:id="@+id/button10"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/plus"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>


            <Button
                android:id="@+id/button11"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/minuss"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>

            <Button
                android:id="@+id/hexx"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/hex"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />






        </LinearLayout>
        <!-- WIEEEEEEEERSZ -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/sin"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/sin"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>

            <Button
                android:id="@+id/cos"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/cos"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>

            <Button
                android:id="@+id/tg"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/tang"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/pi"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/pi"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

        </LinearLayout>

        <!-- WIEEEEEEEERSZ -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/asin"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/asin"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>

            <Button
                android:id="@+id/acos"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/acos"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"/>

            <Button
                android:id="@+id/atg"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="@string/atang"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

            <Button
                android:id="@+id/ctg"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/przyciski2_prosty"
                android:onClick="onClick"
                android:text="ctg"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                />

        </LinearLayout>


        <Button
            android:id="@+id/button12"
            android:layout_width="283dp"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/przyciski2_prosty"
            android:onClick="onClick"
            android:text="="
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
