<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theory"
            android:drawableStart="@mipmap/ic_launcher"
            android:textAlignment="textStart"
            android:background="@drawable/button_main_activity"
            style="@style/button_text"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculators"
            android:drawableStart="@mipmap/ic_launcher"
            android:textAlignment="textStart"
            android:background="@drawable/button_main_activity"
            style="@style/button_text"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriptions"
            android:drawableStart="@mipmap/ic_launcher"
            android:textAlignment="textStart"
            android:background="@drawable/button_main_activity"
            style="@style/button_text"/>

    </LinearLayout>


</LinearLayout>
