<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/prosty_k"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/prosty"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/bramki_k"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/bramki_logiczne"
            android:textAlignment="textStart" />

<!-- shows submenu -->

        <LinearLayout
            android:id="@+id/logic_submenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="NOT"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="AND"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="NAND"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="OR"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="NOR"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="XOR"/>



        </LinearLayout>

        <Button
            android:id="@+id/opisy_k"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/descriptions"
            android:textAlignment="textStart" />

    </LinearLayout>


</LinearLayout>
